--- a/UI_Functions/Home_Page.ui
+++ b/UI_Functions/Home_Page.ui
@@ -401,7 +401,7 @@ QPushButton:hover{
              <string notr="true">background-color:none</string>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>2</number>
             </property>
             <widget class="QWidget" name="Home_Page_Screen">
              <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -2178,7 +2178,7 @@ QFrame:hover{
 border:none;</string>
                        </property>
                        <property name="text">
-                        <string>Minor Body: </string>
+                        <string>SOI of:</string>
                        </property>
                       </widget>
                       <widget class="QLabel" name="label_10">
@@ -2200,10 +2200,10 @@ border:none;</string>
 border:none;</string>
                        </property>
                        <property name="text">
-                        <string>Minor Body Mass:</string>
+                        <string>Mass of </string>
                        </property>
                       </widget>
-                      <widget class="QComboBox" name="comboBox_2">
+                      <widget class="QComboBox" name="SOI_planet_name">
                        <property name="geometry">
                         <rect>
                          <x>220</x>
@@ -2284,64 +2284,6 @@ QComboBox:hover{
                         </property>
                        </item>
                       </widget>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox">
-                       <property name="geometry">
-                        <rect>
-                         <x>220</x>
-                         <y>80</y>
-                         <width>211</width>
-                         <height>41</height>
-                        </rect>
-                       </property>
-                       <property name="styleSheet">
-                        <string notr="true">    /*spinbox lift style*/
-    QTimeEdit::up-button,QDoubleSpinBox::up-button,QSpinBox::up-button {subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(GUI-test/Resources/right_arrow.svg);
-        width: 12px;
-        height: 20px;  
-		
-		
-	 
-		
-    }
-
- 
-    QTimeEdit::down-button,QDoubleSpinBox::down-button,QSpinBox::down-button {subcontrol-origin:border;
-        subcontrol-position:left;
-        image: url(GUI-test/Resources/left_arrow.svg);
-        width: 12px;
-        height: 20px;
-    }
-     /*Button press style*/
-    QTimeEdit::up-button:pressed,QDoubleSpinBox::up-button:pressed,QSpinBox::up-button:pressed{subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(:/ico/pushed_right.png);
-        width: 12px;
-        height: 20px;       
-    }
-      
-QTimeEdit::down-button:pressed,QDoubleSpinBox::down-button:pressed,QSpinBox::down-button:pressed,QSpinBox::down-button:pressed{
-        subcontrol-position:left;
-        image: url(:/ico/pushed_left.png);
-        width: 12px;
-        height: 20px;
-    }
-
-QDoubleSpinBox{
-	
-	border: 5px solid rgb(84, 84, 197);
-	font: 12pt &quot;Arial&quot;;
-	border-radius: 20px;}
-
-
-QDoubleSpinBox:hover{
-	border: 4px solid rgb(2, 119, 189);
-
-
-}</string>
-                       </property>
-                      </widget>
                       <widget class="QLabel" name="label_14">
                        <property name="geometry">
                         <rect>
@@ -2362,64 +2304,6 @@ border:none;</string>
                        </property>
                        <property name="text">
                         <string>Distance Between them:</string>
-                       </property>
-                      </widget>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_3">
-                       <property name="geometry">
-                        <rect>
-                         <x>710</x>
-                         <y>80</y>
-                         <width>201</width>
-                         <height>41</height>
-                        </rect>
-                       </property>
-                       <property name="styleSheet">
-                        <string notr="true">    /*spinbox lift style*/
-    QTimeEdit::up-button,QDoubleSpinBox::up-button,QSpinBox::up-button {subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(GUI-test/Resources/right_arrow.svg);
-        width: 12px;
-        height: 20px;  
-		
-		
-	 
-		
-    }
-
- 
-    QTimeEdit::down-button,QDoubleSpinBox::down-button,QSpinBox::down-button {subcontrol-origin:border;
-        subcontrol-position:left;
-        image: url(GUI-test/Resources/left_arrow.svg);
-        width: 12px;
-        height: 20px;
-    }
-     /*Button press style*/
-    QTimeEdit::up-button:pressed,QDoubleSpinBox::up-button:pressed,QSpinBox::up-button:pressed{subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(:/ico/pushed_right.png);
-        width: 12px;
-        height: 20px;       
-    }
-      
-QTimeEdit::down-button:pressed,QDoubleSpinBox::down-button:pressed,QSpinBox::down-button:pressed,QSpinBox::down-button:pressed{
-        subcontrol-position:left;
-        image: url(:/ico/pushed_left.png);
-        width: 12px;
-        height: 20px;
-    }
-
-QDoubleSpinBox{
-	
-	border: 5px solid rgb(84, 84, 197);
-	font: 12pt &quot;Arial&quot;;
-	border-radius: 20px;}
-
-
-QDoubleSpinBox:hover{
-	border: 4px solid rgb(2, 119, 189);
-
-
-}</string>
                        </property>
                       </widget>
                       <widget class="QLabel" name="label_11">
@@ -2463,7 +2347,7 @@ border:none;</string>
 color: white;</string>
                        </property>
                        <property name="text">
-                        <string>Major Body:</string>
+                        <string>In Presence of:</string>
                        </property>
                       </widget>
                       <widget class="QLabel" name="label_12">
@@ -2488,70 +2372,12 @@ border:none;</string>
                         <string>Major Body Mass:</string>
                        </property>
                       </widget>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
-                       <property name="geometry">
-                        <rect>
-                         <x>500</x>
-                         <y>150</y>
-                         <width>251</width>
-                         <height>41</height>
-                        </rect>
-                       </property>
-                       <property name="styleSheet">
-                        <string notr="true">    /*spinbox lift style*/
-    QTimeEdit::up-button,QDoubleSpinBox::up-button,QSpinBox::up-button {subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(GUI-test/Resources/right_arrow.svg);
-        width: 12px;
-        height: 20px;  
-		
-		
-	 
-		
-    }
-
- 
-    QTimeEdit::down-button,QDoubleSpinBox::down-button,QSpinBox::down-button {subcontrol-origin:border;
-        subcontrol-position:left;
-        image: url(GUI-test/Resources/left_arrow.svg);
-        width: 12px;
-        height: 20px;
-    }
-     /*Button press style*/
-    QTimeEdit::up-button:pressed,QDoubleSpinBox::up-button:pressed,QSpinBox::up-button:pressed{subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(:/ico/pushed_right.png);
-        width: 12px;
-        height: 20px;       
-    }
-      
-QTimeEdit::down-button:pressed,QDoubleSpinBox::down-button:pressed,QSpinBox::down-button:pressed,QSpinBox::down-button:pressed{
-        subcontrol-position:left;
-        image: url(:/ico/pushed_left.png);
-        width: 12px;
-        height: 20px;
-    }
-
-QDoubleSpinBox{
-	
-	border: 5px solid rgb(84, 84, 197);
-	font: 12pt &quot;Arial&quot;;
-	border-radius: 20px;}
-
-
-QDoubleSpinBox:hover{
-	border: 4px solid rgb(2, 119, 189);
-
-
-}</string>
-                       </property>
-                      </widget>
-                      <widget class="QComboBox" name="comboBox_3">
+                      <widget class="QComboBox" name="affect_planet_name">
                        <property name="geometry">
                         <rect>
                          <x>710</x>
                          <y>10</y>
-                         <width>201</width>
+                         <width>211</width>
                          <height>41</height>
                         </rect>
                        </property>
@@ -2657,7 +2483,7 @@ border:none;</string>
                       <widget class="QLabel" name="label_16">
                        <property name="geometry">
                         <rect>
-                         <x>760</x>
+                         <x>720</x>
                          <y>160</y>
                          <width>141</width>
                          <height>21</height>
@@ -2674,6 +2500,123 @@ border:none;</string>
                        </property>
                        <property name="text">
                         <string>Km</string>
+                       </property>
+                      </widget>
+                      <widget class="QPushButton" name="soi_cal">
+                       <property name="geometry">
+                        <rect>
+                         <x>820</x>
+                         <y>170</y>
+                         <width>101</width>
+                         <height>41</height>
+                        </rect>
+                       </property>
+                       <property name="font">
+                        <font>
+                         <pointsize>12</pointsize>
+                        </font>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">QPushButton{
+	background-color:rgb(2, 119, 189);
+	color:rgb(245, 255, 179);
+	border-radius: 20px
+}
+
+QPushButton:hover{
+	
+	background-color: rgb(255, 170, 0);
+}</string>
+                       </property>
+                       <property name="text">
+                        <string>Calculate</string>
+                       </property>
+                      </widget>
+                      <widget class="QLabel" name="soi_mass">
+                       <property name="geometry">
+                        <rect>
+                         <x>220</x>
+                         <y>80</y>
+                         <width>211</width>
+                         <height>41</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">
+
+QLabel{
+	
+	border: 5px solid rgb(84, 84, 197);
+	font: 12pt &quot;Arial&quot;;
+	border-radius: 20px;}
+
+
+QLabel:hover{
+	border: 4px solid rgb(2, 119, 189);
+
+
+}</string>
+                       </property>
+                       <property name="text">
+                        <string/>
+                       </property>
+                      </widget>
+                      <widget class="QLabel" name="affect_mass">
+                       <property name="geometry">
+                        <rect>
+                         <x>710</x>
+                         <y>80</y>
+                         <width>211</width>
+                         <height>41</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">
+
+QLabel{
+	
+	border: 5px solid rgb(84, 84, 197);
+	font: 12pt &quot;Arial&quot;;
+	border-radius: 20px;}
+
+
+QLabel:hover{
+	border: 4px solid rgb(2, 119, 189);
+
+
+}</string>
+                       </property>
+                       <property name="text">
+                        <string/>
+                       </property>
+                      </widget>
+                      <widget class="QLabel" name="label_21">
+                       <property name="geometry">
+                        <rect>
+                         <x>500</x>
+                         <y>150</y>
+                         <width>211</width>
+                         <height>41</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">
+
+QLabel{
+	
+	border: 5px solid rgb(84, 84, 197);
+	font: 12pt &quot;Arial&quot;;
+	border-radius: 20px;}
+
+
+QLabel:hover{
+	border: 4px solid rgb(2, 119, 189);
+
+
+}</string>
+                       </property>
+                       <property name="text">
+                        <string/>
                        </property>
                       </widget>
                      </widget>
@@ -2797,64 +2740,6 @@ QPushButton:hover{
                         <string>Get 3D Visualization</string>
                        </property>
                       </widget>
-                      <widget class="QDoubleSpinBox" name="doubleSpinBox_4">
-                       <property name="geometry">
-                        <rect>
-                         <x>220</x>
-                         <y>20</y>
-                         <width>261</width>
-                         <height>41</height>
-                        </rect>
-                       </property>
-                       <property name="styleSheet">
-                        <string notr="true">    /*spinbox lift style*/
-    QTimeEdit::up-button,QDoubleSpinBox::up-button,QSpinBox::up-button {subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(GUI-test/Resources/right_arrow.svg);
-        width: 12px;
-        height: 20px;  
-		
-		
-	 
-		
-    }
-
- 
-    QTimeEdit::down-button,QDoubleSpinBox::down-button,QSpinBox::down-button {subcontrol-origin:border;
-        subcontrol-position:left;
-        image: url(GUI-test/Resources/left_arrow.svg);
-        width: 12px;
-        height: 20px;
-    }
-     /*Button press style*/
-    QTimeEdit::up-button:pressed,QDoubleSpinBox::up-button:pressed,QSpinBox::up-button:pressed{subcontrol-origin:border;
-        subcontrol-position:right;
-        image: url(:/ico/pushed_right.png);
-        width: 12px;
-        height: 20px;       
-    }
-      
-QTimeEdit::down-button:pressed,QDoubleSpinBox::down-button:pressed,QSpinBox::down-button:pressed,QSpinBox::down-button:pressed{
-        subcontrol-position:left;
-        image: url(:/ico/pushed_left.png);
-        width: 12px;
-        height: 20px;
-    }
-
-QDoubleSpinBox{
-	
-	border: 5px solid rgb(84, 84, 197);
-	font: 12pt &quot;Arial&quot;;
-	border-radius: 20px;}
-
-
-QDoubleSpinBox:hover{
-	border: 4px solid rgb(2, 119, 189);
-
-
-}</string>
-                       </property>
-                      </widget>
                       <widget class="QLabel" name="label_17">
                        <property name="geometry">
                         <rect>
@@ -2880,7 +2765,7 @@ border:none;</string>
                       <widget class="QLabel" name="label_18">
                        <property name="geometry">
                         <rect>
-                         <x>70</x>
+                         <x>90</x>
                          <y>30</y>
                          <width>131</width>
                          <height>21</height>
@@ -2897,6 +2782,35 @@ border:none;</string>
                        </property>
                        <property name="text">
                         <string>SOI Radius of</string>
+                       </property>
+                      </widget>
+                      <widget class="QLabel" name="label_22">
+                       <property name="geometry">
+                        <rect>
+                         <x>270</x>
+                         <y>20</y>
+                         <width>211</width>
+                         <height>41</height>
+                        </rect>
+                       </property>
+                       <property name="styleSheet">
+                        <string notr="true">
+
+QLabel{
+	
+	border: 5px solid rgb(84, 84, 197);
+	font: 12pt &quot;Arial&quot;;
+	border-radius: 20px;}
+
+
+QLabel:hover{
+	border: 4px solid rgb(2, 119, 189);
+
+
+}</string>
+                       </property>
+                       <property name="text">
+                        <string/>
                        </property>
                       </widget>
                      </widget>
