--- a/UI_Functions/Home_Page.ui
+++ b/UI_Functions/Home_Page.ui
@@ -2022,27 +2022,38 @@ QLabel:hover{
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <widget class="QLabel" name="label_7">
-                    <property name="geometry">
-                     <rect>
-                      <x>60</x>
-                      <y>10</y>
-                      <width>61</width>
-                      <height>16</height>
-                     </rect>
+                   <layout class="QHBoxLayout" name="horizontalLayout_16">
+                    <property name="spacing">
+                     <number>0</number>
                     </property>
-                    <property name="font">
-                     <font>
-                      <pointsize>11</pointsize>
-                     </font>
+                    <property name="leftMargin">
+                     <number>0</number>
                     </property>
-                    <property name="styleSheet">
-                     <string notr="true">color: white;</string>
+                    <property name="topMargin">
+                     <number>0</number>
                     </property>
-                    <property name="text">
-                     <string>Inputs:</string>
+                    <property name="rightMargin">
+                     <number>0</number>
                     </property>
-                   </widget>
+                    <property name="bottomMargin">
+                     <number>0</number>
+                    </property>
+                    <item>
+                     <widget class="QLabel" name="label_7">
+                      <property name="font">
+                       <font>
+                        <pointsize>11</pointsize>
+                       </font>
+                      </property>
+                      <property name="styleSheet">
+                       <string notr="true">color: white;</string>
+                      </property>
+                      <property name="text">
+                       <string>                      Inputs:</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                  <item>
@@ -2097,7 +2108,7 @@ QFrame:hover{
                       <widget class="QLabel" name="label_8">
                        <property name="geometry">
                         <rect>
-                         <x>160</x>
+                         <x>120</x>
                          <y>30</y>
                          <width>171</width>
                          <height>21</height>
@@ -2430,27 +2441,38 @@ QPushButton:hover{
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <widget class="QLabel" name="label_15">
-                    <property name="geometry">
-                     <rect>
-                      <x>60</x>
-                      <y>10</y>
-                      <width>61</width>
-                      <height>16</height>
-                     </rect>
+                   <layout class="QHBoxLayout" name="horizontalLayout_19">
+                    <property name="spacing">
+                     <number>0</number>
                     </property>
-                    <property name="font">
-                     <font>
-                      <pointsize>11</pointsize>
-                     </font>
+                    <property name="leftMargin">
+                     <number>0</number>
                     </property>
-                    <property name="styleSheet">
-                     <string notr="true">color: white;</string>
+                    <property name="topMargin">
+                     <number>0</number>
                     </property>
-                    <property name="text">
-                     <string>Outputs:</string>
+                    <property name="rightMargin">
+                     <number>0</number>
                     </property>
-                   </widget>
+                    <property name="bottomMargin">
+                     <number>0</number>
+                    </property>
+                    <item>
+                     <widget class="QLabel" name="label_15">
+                      <property name="font">
+                       <font>
+                        <pointsize>11</pointsize>
+                       </font>
+                      </property>
+                      <property name="styleSheet">
+                       <string notr="true">color: white;</string>
+                      </property>
+                      <property name="text">
+                       <string>                      Outputs:</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                  <item>
