--- a/UI_Functions/splash_screen.ui
+++ b/UI_Functions/splash_screen.ui
@@ -34,7 +34,7 @@
      <widget class="QFrame" name="dropShadowFrame">
       <property name="styleSheet">
        <string notr="true">QFrame {	
-	background-color: rgb(56, 58, 89);	
+	background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:0, y2:0, stop:0 rgba(50, 47, 111, 255), stop:0.488636 rgba(28, 30, 72, 255));	
 	
 
 	color: rgb(220, 220, 220);
@@ -47,7 +47,7 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QLabel" name="label_description">
+      <widget class="QLabel" name="app_description_lbl">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -63,7 +63,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">color: rgb(98, 114, 164);</string>
+        <string notr="true">color: rgb(98, 114, 164);
+background-color:transparent;</string>
        </property>
        <property name="text">
         <string>&lt;strong&gt;APP&lt;/strong&gt; DESCRIPTION</string>
@@ -106,7 +107,7 @@ QProgressBar::chunk{
         <number>24</number>
        </property>
       </widget>
-      <widget class="QLabel" name="label_loading">
+      <widget class="QLabel" name="loading_lbl">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -122,7 +123,8 @@ QProgressBar::chunk{
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">color: rgb(98, 114, 164);</string>
+        <string notr="true">background-color:transparent;
+color: rgb(98, 114, 164);</string>
        </property>
        <property name="text">
         <string>loading...</string>
@@ -131,7 +133,7 @@ QProgressBar::chunk{
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
-      <widget class="QFrame" name="frame">
+      <widget class="QFrame" name="logo_frame">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -139,6 +141,9 @@ QProgressBar::chunk{
          <width>731</width>
          <height>221</height>
         </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color:transparent;</string>
        </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
@@ -157,7 +162,7 @@ QProgressBar::chunk{
          <number>0</number>
         </property>
         <item>
-         <widget class="QLabel" name="label_title">
+         <widget class="QLabel" name="logo_lbl">
           <property name="font">
            <font>
             <family>Segoe UI</family>
@@ -165,7 +170,8 @@ QProgressBar::chunk{
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">color: rgb(254, 121, 199);</string>
+           <string notr="true">color: rgb(254, 121, 199);
+background-color:transparent;</string>
           </property>
           <property name="text">
            <string/>
@@ -182,6 +188,22 @@ QProgressBar::chunk{
          </widget>
         </item>
        </layout>
+      </widget>
+      <widget class="QLabel" name="label">
+       <property name="geometry">
+        <rect>
+         <x>570</x>
+         <y>330</y>
+         <width>47</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color:transparent;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
       </widget>
      </widget>
     </item>
