Organized some file and added some features
A function created called 'call_database.py' for calling mass, radius and distance from the sun of any specified major body.

--- a/UI_Functions/Home_Page.ui
+++ b/UI_Functions/Home_Page.ui
@@ -2598,7 +2598,7 @@ border:none;</string>
                         <string>Km</string>
                        </property>
                       </widget>
-                      <widget class="QLabel" name="label_18">
+                      <widget class="QLabel" name="rSOI_of_planet_lbl">
                        <property name="geometry">
                         <rect>
                          <x>10</x>
@@ -4564,7 +4564,7 @@ border:none;</string>
                        </size>
                       </property>
                       <property name="toolTip">
-                       <string>VPCO Home</string>
+                       <string>Previous Screen</string>
                       </property>
                       <property name="styleSheet">
                        <string notr="true">QPushButton{
