--- a/UI_Functions/Home_Page.ui
+++ b/UI_Functions/Home_Page.ui
@@ -48,7 +48,7 @@
     <item>
      <widget class="QFrame" name="drop_shadow_frame">
       <property name="styleSheet">
-       <string notr="true">background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:0, y2:0, stop:0 rgba(50, 47, 111, 220), stop:0.488636 rgba(28, 30, 72, 220));
+       <string notr="true">background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:0, y2:0, stop:0 rgba(50, 47, 111, 88%), stop:0.488636 rgba(28, 30, 72,88%));
 border-radius: 15px</string>
       </property>
       <property name="frameShape">
@@ -407,6 +407,9 @@ QPushButton:hover{
              <number>0</number>
             </property>
             <widget class="QWidget" name="Home_Page_Screen">
+             <property name="styleSheet">
+              <string notr="true"/>
+             </property>
              <layout class="QVBoxLayout" name="verticalLayout_4">
               <property name="spacing">
                <number>0</number>
@@ -489,6 +492,9 @@ QPushButton:hover{
                       <property name="toolTip">
                        <string/>
                       </property>
+                      <property name="styleSheet">
+                       <string notr="true">background-color:transparent;</string>
+                      </property>
                       <property name="frameShape">
                        <enum>QFrame::StyledPanel</enum>
                       </property>
@@ -529,7 +535,7 @@ QPushButton:hover{
                           </size>
                          </property>
                          <property name="styleSheet">
-                          <string notr="true"/>
+                          <string notr="true">opacity:50%;</string>
                          </property>
                          <property name="text">
                           <string/>
@@ -561,6 +567,9 @@ QPushButton:hover{
                      <width>16777215</width>
                      <height>200</height>
                     </size>
+                   </property>
+                   <property name="styleSheet">
+                    <string notr="true">background-color: transparent;</string>
                    </property>
                    <property name="frameShape">
                     <enum>QFrame::StyledPanel</enum>
@@ -601,6 +610,9 @@ QPushButton:hover{
                       <property name="toolTip">
                        <string>Click on drop down Button</string>
                       </property>
+                      <property name="styleSheet">
+                       <string notr="true">background-color:transparent;</string>
+                      </property>
                       <property name="frameShape">
                        <enum>QFrame::NoFrame</enum>
                       </property>
@@ -636,12 +648,14 @@ QPushButton:hover{
                          </property>
                          <property name="styleSheet">
                           <string notr="true">QComboBox{
+	background-color: rgb(255, 255, 255,70%);
 	border: 5px solid rgb(255, 170, 0);
 	font: 12pt &quot;Arial&quot;;
 	border-radius: 17px;}
 
 
 QComboBox:hover{
+	background-color: rgb(255, 255, 255,70%);
 	border: 4px solid rgb(2, 119, 189);
 }</string>
                          </property>
@@ -744,6 +758,9 @@ QComboBox:hover{
                         <height>50</height>
                        </size>
                       </property>
+                      <property name="styleSheet">
+                       <string notr="true">background-color:transparent;</string>
+                      </property>
                       <property name="frameShape">
                        <enum>QFrame::StyledPanel</enum>
                       </property>
@@ -768,6 +785,9 @@ QComboBox:hover{
                        </property>
                        <item>
                         <widget class="QFrame" name="frame_2">
+                         <property name="styleSheet">
+                          <string notr="true">background-color:transparent;</string>
+                         </property>
                          <property name="frameShape">
                           <enum>QFrame::StyledPanel</enum>
                          </property>
@@ -784,6 +804,9 @@ QComboBox:hover{
                            <height>300</height>
                           </size>
                          </property>
+                         <property name="styleSheet">
+                          <string notr="true">background-color:transparent;</string>
+                         </property>
                          <property name="frameShape">
                           <enum>QFrame::StyledPanel</enum>
                          </property>
@@ -791,6 +814,21 @@ QComboBox:hover{
                           <enum>QFrame::Raised</enum>
                          </property>
                          <layout class="QVBoxLayout" name="verticalLayout_13">
+                          <property name="spacing">
+                           <number>0</number>
+                          </property>
+                          <property name="leftMargin">
+                           <number>0</number>
+                          </property>
+                          <property name="topMargin">
+                           <number>0</number>
+                          </property>
+                          <property name="rightMargin">
+                           <number>0</number>
+                          </property>
+                          <property name="bottomMargin">
+                           <number>0</number>
+                          </property>
                           <item>
                            <widget class="QPushButton" name="Go_btn">
                             <property name="sizePolicy">
@@ -820,14 +858,14 @@ QComboBox:hover{
                             </property>
                             <property name="styleSheet">
                              <string notr="true">QPushButton{
-	background-color:rgb(2, 119, 189);
+	background-color:rgb(2, 119, 189,50%);
 	color:rgb(245, 255, 179);
 	border-radius: 20px
 }
 
 QPushButton:hover{
 	
-	background-color: rgb(255, 170, 0);
+	background-color: rgb(255, 170, 0,50%);
 }</string>
                             </property>
                             <property name="text">
@@ -840,6 +878,9 @@ QPushButton:hover{
                        </item>
                        <item>
                         <widget class="QFrame" name="frame_8">
+                         <property name="styleSheet">
+                          <string notr="true">background-color:transparent;</string>
+                         </property>
                          <property name="frameShape">
                           <enum>QFrame::StyledPanel</enum>
                          </property>
@@ -10568,7 +10609,7 @@ color:white;</string>
                    <property name="styleSheet">
                     <string notr="true">QLabel{
 	
-	border: 5px solid rgb(84, 84, 197,180);
+	border: 5px solid rgb(84, 84, 197,88%);
 	font: 12pt &quot;Arial&quot;;
 	border-radius: 20px;
 	color:white;
@@ -10576,19 +10617,19 @@ color:white;</string>
 
 
 QLabel:hover{
-	border: 4px solid rgb(2, 119, 189,180);
+	border: 4px solid rgb(2, 119, 189,88%);
 
 
 }
 
 QFrame{
 
-border: 5px solid rgb(143, 55, 143,180);
+border: 5px solid rgb(143, 55, 143,88%);
 border-radius: 15px;
 }
 
 QFrame:hover{
-	border: 5px solid  rgb(255, 248, 166,180);
+	border: 5px solid  rgb(255, 248, 166,88%);
 	
 }
 </string>
@@ -11301,7 +11342,7 @@ color:white;
                    <property name="styleSheet">
                     <string notr="true">QLabel{
 	
-	border: 5px solid rgb(84, 84, 197,180);
+	border: 5px solid rgb(84, 84, 197,88%);
 	font: 12pt &quot;Arial&quot;;
 	border-radius: 20px;
 	color:white;
@@ -11309,19 +11350,19 @@ color:white;
 
 
 QLabel:hover{
-	border: 4px solid rgb(2, 119, 189,180);
+	border: 4px solid rgb(2, 119, 189,88%);
 
 
 }
 
 QFrame{
 
-border: 5px solid rgb(143, 55, 143,180);
+border: 5px solid rgb(143, 55, 143,88%);
 border-radius: 15px;
 }
 
 QFrame:hover{
-	border: 5px solid  rgb(255, 248, 166,180);
+	border: 5px solid  rgb(255, 248, 166,88%);
 	
 }
 </string>
